# smart-home-salary

./: .gitignore  LICENSE  README.md  openclaw.json  package-lock.json  package.json
.github/workflows/: build.yml
apps/api/: .dockerignore  .env.example  .env.sqlite  .eslintrc.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/api/.github/: pull_request_template.md
apps/api/http/: audit.http  auth.http  billing.http  feature-flags.http  health.http  memberships.http  tenants.http  users.http
apps/api/observability/: loki-config.yaml  prometheus.yaml  tempo-config.yaml
apps/api/prisma/: cleanup-testdata.ts  schema.prisma  schema.sqlite.prisma  seed-desktop.ts  seed-testdata.ts  seed-warehouse.ts  (+1 more)
apps/web/: .dockerignore  Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
desktop/: README.md  build.sh  start.bat  start.sh
docs/: TAURI_BUILD.md
infra/: .env.prod.example  docker-compose.prod.yml  docker-compose.yml
infra/backup/: backup.sh  crontab.example  restore.md  restore.sh
infra/verify/: verify.sh
skills/admin-guide/: SKILL.md
skills/employee-skill-router/: SKILL.md
skills/member-salary/: SKILL.md
skills/member-sales/: SKILL.md
skills/member-technician/: SKILL.md
skills/salary-assistant/: SKILL.md
skills/taxonomy-smart-home/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
需求资料/: README.md
(+261 files in other folders)
