[package]
name = "smarthome"
version = "1.1.2"
description = "智能家居行业SaaS管理系统桌面版"
authors = ["SYMI-DA GUO"]
license = "MIT"
repository = "https://github.com/symi-daguo/smart-home-salary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "smarthome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
