[package]
name = "smarthome"
version = "1.1.8"
description = "智能家居行业SaaS管理系统桌面版"
authors = ["SYMI-DA GUO"]
license = "MIT"
repository = "https://github.com/symi-daguo/smart-home-salary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "smarthome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
